--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "pg": "^8.17.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
